--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Clip Path CSS</title>
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
 </head>
 <body>
     
+    <div class="container">
+        <div class="inner">
+            <h1>Hello</h1>
+            <p>This is an informative card that will tell you something that's... well, important!</p>
+        </div>
+    </div>
+
 </body>
 </html>
