--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
     <div class="container">
         <div class="inner">
+            <span>i</span>
             <h1>Hello</h1>
             <p>This is an informative card that will tell you something that's... well, important!</p>
         </div>
