--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Clip Path CSS</title>
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700,800|Nunito&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/363c4c2d8b.js"></script>
 </head>
 <body>
     
     <div class="container">
+        <h1 class="title"> CSS Clip Path Property</h1>
         <div class="inner">
-            <span>i</span>
+            <span><i class="fas fa-mouse-pointer"></i></span>
             <h1>Hello</h1>
             <p>This is an informative card that will tell you something that's... well, important!</p>
         </div>
